--- a/newmenu.html
+++ b/newmenu.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+    <script>
+  $("#header").load("header.html");
+</script>
 <body>
 <header id="header" class="header">
     <div class="container">
@@ -36,7 +39,7 @@
                                         <tbody></tbody>
                                     </table>
 
-                                    <a href="chckout.html" id="clear-cart" class="button u-full-width">Proceed</a>
+                                    <a href="chckout.html" id="clear-cart" class="button u-full-width" >Proceed</a>
                             </div>
                     </li>
                 </ul>
@@ -58,7 +61,7 @@
                         <p>Penne Pasta</p>
                         <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="1">Add to Cart</a>
+                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="1" onclick="popupMessage()">Add to Cart</a>
                     </div>
                 </div> 
             </div>
@@ -71,7 +74,7 @@
                             <img src="https://thumbs.dreamstime.com/z/discount-stamp-vector-clip-art-33305813.jpg" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
                             
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="2">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="2" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div>
             </div>
@@ -83,7 +86,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://thumbs.dreamstime.com/z/discount-stamp-vector-clip-art-33305813.jpg" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="3">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="3" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div> <!--.card-->
             </div>
@@ -98,7 +101,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="4">Add to Cart</a>
+                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="4" onclick="popupMessage()">Add to Cart</a>
                     </div>
                 </div> <!--.card-->
             </div>
@@ -110,7 +113,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="5">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="5" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div> <!--.card-->
             </div>
@@ -122,7 +125,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="6">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="6" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div> <!--.card-->
             </div>
@@ -136,7 +139,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="7">Add to Cart</a>
+                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="7" onclick="popupMessage()">Add to Cart</a>
                     </div>
                 </div> <!--.card-->
             </div>
@@ -148,7 +151,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="8">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="8" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div> <!--.card-->
             </div>
@@ -160,7 +163,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="9">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="9" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div> <!--.card-->
             </div>
@@ -174,7 +177,7 @@
                             <p>Penne Pasta</p>
                             <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                         <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="10">Add to Cart</a>
+                            <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="10" onclick="popupMessage()">Add to Cart</a>
                         </div>
                     </div> <!--.card-->
                 </div>
@@ -186,7 +189,7 @@
                                 <p>Penne Pasta</p>
                                 <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                             <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                                <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="11">Add to Cart</a>
+                                <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="11" onclick="popupMessage()">Add to Cart</a>
                             </div>
                         </div> <!--.card-->
                 </div>
@@ -198,15 +201,22 @@
                                 <p>Penne Pasta</p>
                                 <img src="https://assets.stickpng.com/thumbs/5a0589189cf05203c4b603d9.png" class="rounded-circle" alt="Cinque Terre" width="40" height="40">
                             <p class="price">600 INR  <span class="u-pull-right ">510 INR</span></p>
-                                <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="12">Add to Cart</a>
+                                <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="12" onclick="popupMessage()">Add to Cart</a>
                             </div>
                         </div> <!--.card-->
                 </div>
             </div> <!--.row-->
     </div>
-
+<script>
+    function popupMessage()
+    {
+        event.preventDefault();
+        alert("Added Item Successfully");
+    }
+</script>
 
     <script src="js/app.js"></script>
+
 
 </body>
 </html>
