--- a/sss.html
+++ b/sss.html
@@ -19,6 +19,9 @@
 
     <link rel="stylesheet" href="./css/dom.css">
 </head>
+    <script>
+  $("#header").load("header.html");
+</script>
 
 <body>
   
