--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - HelpDesk </title>
+    <title>Login </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         crossorigin="anonymous">
     <!-- jQuery and JS bundle w/ Popper.js -->
@@ -204,7 +204,7 @@
             console.log(user);
             if (user) {
                 if (user.role == 'USER') {
-                    window.location.href = "menu.html";
+                    window.location.href = "sss.html";
                 }
                 else if (user.role == "ADMIN") {
                     window.location.href = "admindashboard.html";
