--- a/admindashboard.html
+++ b/admindashboard.html
@@ -58,7 +58,7 @@
     <hr>
 
     <script>
-        $("#header").load("components/_header.html");
+        $("#header").load("header1.html");
     </script>
     <script>
         var obj = JSON.parse(localStorage.getItem("LOGGED_IN_USER"));
