--- a/order_status.html
+++ b/order_status.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header id="header">
+    <header id="header1">
         <!-- Load Header content-->
     </header>
     <main class="container-fluid">
@@ -51,7 +51,7 @@
     <hr>
 
     <script>
-        $("#header").load("components/_header.html");
+        $("#header").load("header1.html");
     </script>
     <script>
         var checkout = JSON.parse(localStorage.getItem("CHECKOUT")) || [];
