--- a/order_status.html
+++ b/order_status.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header id="header1">
+    <header id="header">
         <!-- Load Header content-->
     </header>
     <main class="container-fluid">
