--- a/sss.html
+++ b/sss.html
@@ -38,7 +38,7 @@
 
       <div class="row">
           <div class="col-md-12">
-            <input type="text" id="myInput" onkeyup="search()" placeholder="Search for names.." title="Type in a name">
+            <!--input type="text" id="myInput" onkeyup="search()" placeholder="Search for names.." title="Type in a name"-->
           </div>
       </div>
       <div class="row">
